Name:                cache-file
Version:             0.1

Synopsis:            A simple library for caching the results of slow file reads

-- Description:

License:             BSD3
License-file:        LICENSE
Author:              Alec Heller
Maintainer:          alec@deviant-logic.net
Category:            Data

Build-type:          Simple

Cabal-version:       >=1.2


Library
  Exposed-modules: Data.CacheFile
  Build-depends:   base, binary, unix, directory, old-time, transformers
  Other-modules:   Data.CacheFile.Internal

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:

Executable cftest
  Main-Is: cftest.hs
  build-depends: base, HUnit, binary

-- Test-Suite cftest
--   type: exitcode-stdio-1.0
--   main-is: cftest.hs
--   build-depends: base, HUnit, binary